attempt to fix product filter in products list widget on Firefox

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1032,19 +1032,23 @@ hr {
                 }
             }
             select {
+                -moz-appearance: none;
+                text-indent: 0.01px;
+                text-overflow: '';
+                background-position: right 12px center;
+                background-position-x: 93%;
+                background-position-y: 55%;
+                cursor: pointer;
+                -webkit-appearance: none;
                 font-size: bkscale(@font-swatch5-font-size, 0.85);
                 border: 0;
                 -webkit-border-radius: 0;
                 border-radius: 0;
                 height: 32px;
-                -webkit-appearance: none;
-                text-indent: 0.01px;
-                text-overflow: '';
                 border: 1px solid lighten(@color-swatch5, 40%);
                 padding: 4px 35px 4px 12px;
-                background: image('/images/arrow-dropdown.png') 95% center no-repeat, -moz-linear-gradient(top, white 0%, #f3f3f3 100%);
-                background: image('/images/arrow-dropdown.png') 95% center no-repeat, -webkit-linear-gradient(top, white 0%, #f3f3f3 100%);
-                background: image('/images/arrow-dropdown.png') 95% center no-repeat, linear-gradient(to bottom, white);
+                background-image: image('/images/arrow-dropdown.png');
+                background-repeat: no-repeat;
                 @media @tablet {
                     width: 100%;
                 }
